--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:2.4.1")
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     /*FHIR */
     implementation("com.google.android.fhir:engine:0.1.0-alpha06")
