--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -65,7 +64,7 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
-
+    implementation 'com.andrognito.pinlockview:pinlockview:2.1.0'
     /*FHIR */
     implementation("com.google.android.fhir:engine:0.1.0-beta01")
     implementation("com.google.android.fhir:data-capture:0.1.0-beta02")
