--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'androidx.navigation.safeargs'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -68,5 +69,11 @@ dependencies {
     implementation("com.google.android.fhir:engine:0.1.0-beta01")
     implementation("com.google.android.fhir:data-capture:0.1.0-beta02")
 //    implementation("com.google.android.fhir:workflow:0.1.0-alpha01")
+
+    // Room components
+    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
+    implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
 }
