--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,10 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+ext {
+    roomVersion = '2.4.0-alpha03'
+    archLifecycleVersion = '2.2.0'
+    coreTestingVersion = '2.1.0'
+    materialVersion = '1.1.0'
+    coroutines = '1.3.4'
+}
