usage of related persons to cater for mother child relation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".auth.SetupActivity"
+            android:exported="false"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"  />
         <activity
             android:name=".screens.profile.ProfileActivity"
             android:exported="false"
@@ -53,12 +57,14 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize">
 
-        <!--     <intent-filter>
+            <!--
+                 <intent-filter>
              <action android:name="android.intent.action.MAIN" />
 
 
              <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>-->
+             </intent-filter>
+            -->
         </activity>
     </application>
 
