--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation("com.google.android.fhir:data-capture:0.1.0-beta02")
 //    implementation("com.google.android.fhir:workflow:0.1.0-alpha01")
 
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
