--- a/app/src/main/assets/breast-feeding.json
+++ b/app/src/main/assets/breast-feeding.json
@@ -48,41 +48,29 @@
           ],
           "item": [
             {
-              "linkId": "3.1.0",
+              "linkId": "Milk-Expressed",
               "type": "group",
               "item": [
                 {
-                  "linkId": "Baby-Breastfeeding",
-                  "type": "choice",
-                  "text": "Baby Breastfeeding?",
-                  "required": true,
-                  "definition": "http://hl7.org/fhir/StructureDefinition/Observation#Observation.code",
+                  "type": "quantity",
+                  "code": [
+                    {
+                      "code": "Milk-Expressed",
+                      "display": "Milk Expressed",
+                      "system": "http://loinc.org/modified"
+                    }
+                  ],
                   "extension": [
                     {
-                      "url": "http://hl7.org/fhir/uv/sdc/StructureDefinition/sdc-questionnaire-initialExpression",
-                      "valueExpression": {
-                        "language": "application/x-fhir-query",
-                        "expression": "Observation",
-                        "name": "readyForDischarge"
+                      "url": "http://hl7.org/fhir/StructureDefinition/questionnaire-unitOption",
+                      "valueCoding": {
+                        "display": "ml"
                       }
                     }
                   ],
-                  "answerOption": [
-                    {
-                      "valueCoding": {
-                        "code": "Breastfeeding",
-                        "display": "Yes",
-                        "system": "custom"
-                      }
-                    },
-                    {
-                      "valueCoding": {
-                        "code": "Breastfeeding",
-                        "display": "No",
-                        "system": "custom"
-                      }
-                    }
-                  ]
+                  "required": true,
+                  "linkId": "/Milk-9",
+                  "text": "Milk Expressed (ml)"
                 }
               ]
             }
@@ -103,41 +91,21 @@
           ],
           "item": [
             {
-              "linkId": "3.1.0",
+              "linkId": "Time-Expressed",
               "type": "group",
               "item": [
                 {
-                  "linkId": "Breastfeeding-Sufficient",
-                  "type": "choice",
-                  "text": "Is Breastfeeding Sufficient?",
-                  "required": true,
-                  "definition": "http://hl7.org/fhir/StructureDefinition/Observation#Observation.code",
-                  "extension": [
+                  "type": "dateTime",
+                  "code": [
                     {
-                      "url": "http://hl7.org/fhir/uv/sdc/StructureDefinition/sdc-questionnaire-initialExpression",
-                      "valueExpression": {
-                        "language": "application/x-fhir-query",
-                        "expression": "Observation",
-                        "name": "readyForDischarge"
-                      }
+                      "code": "Time-Expressed",
+                      "display": "Time Expressed",
+                      "system": "http://loinc.org/modified"
                     }
                   ],
-                  "answerOption": [
-                    {
-                      "valueCoding": {
-                        "code": "Breastfeeding Sufficient",
-                        "display": "No",
-                        "system": "custom"
-                      }
-                    },
-                    {
-                      "valueCoding": {
-                        "code": "Breastfeeding Sufficient",
-                        "display": "Yes",
-                        "system": "custom"
-                      }
-                    }
-                  ]
+                  "required": true,
+                  "linkId": "/Time-Expressed",
+                  "text": "Time Expressed"
                 }
               ]
             }
