--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
 
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
 
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
