--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
     }
     packagingOptions {
         resources {
-            pickFirsts += ['META-INF/ASL-2.0.txt', 'META-INF/LGPL-3.0.txt', 'META-INF/sun-jaxb.episode']
+            pickFirsts += ['META-INF/ASL-2.0.txt', 'META-INF/LGPL-3.0.txt'/*, 'META-INF/sun-jaxb.episode'*/]
         }
     }
 
@@ -66,7 +66,6 @@ dependencies {
     /*FHIR */
     implementation("com.google.android.fhir:engine:0.1.0-beta01")
     implementation("com.google.android.fhir:data-capture:0.1.0-beta03")
-    implementation("com.google.android.fhir:workflow:0.1.0-alpha01")
 
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
