--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,20 +53,20 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0")
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.0")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'androidx.fragment:fragment-ktx:1.5.0'
-    implementation("androidx.navigation:navigation-fragment-ktx:2.5.0")
-    implementation("androidx.navigation:navigation-ui-ktx:2.5.0")
+    implementation 'androidx.fragment:fragment-ktx:1.5.1'
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.1")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.1")
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
     /*FHIR */
     implementation("com.google.android.fhir:engine:0.1.0-beta01")
-    implementation("com.google.android.fhir:data-capture:0.1.0-beta03")
-
+    implementation("com.google.android.fhir:data-capture:0.1.0-beta04")
+    implementation 'com.andrognito.pinlockview:pinlockview:2.1.0'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.core:core-ktx:1.8.0'
